# advent-of-code

./: .gitignore  README.md  snippets.py  template.py
2020/day10/: santa.py
2020/day11/: lots_of_toys.py
2020/day13/: do_reindeer.py  less_math.py
2020/day15/: for_all_the_kids.py
2020/day16/: although.py
2020/day17/: many_many_times.py  many_times.py
2020/day18/: merry_christmas.py
2020/day19/: and_again.py
2020/day2/: jackfrost.py
2020/day20/: definitely_is.py
2020/day21/: to_see_if_reindeer.py
2020/day23/: to_all_kids.py
2020/day24/: though_its_been_said.py
2020/day25/: merry_christmas.py
2020/day3/: carols.py
2020/day4/: eskimos.py
2020/day5/: everybody_knows.py
2020/day6/: turkey.py
2020/day8/: glowing_eyes.py
2021/day10/: in_the_meadow.py
2021/day11/: well_pretend.py
2021/day12/: hell_ask.py
2021/day14/: but_you_can.py
2021/day15/: when_you.py
2021/day16/: later_on.py
2021/day18/: by_the_fire.py
2021/day19/: the_plans.py
2021/day2/: hold_on.py
2021/day20/: walking_in_a.py
2021/day21/: p1_building_snowmen.py  p2_in_the_meadow.py
2021/day22/: p1_well_pretend.py  p2_that_he_is.py  well_pretend.py
2021/day23/: dfs_and_stuff.py  p2_you_married.py
2021/day24/: well_say.py
2021/day3/: in_the_lane.py
2021/day4/: beautiful_sight.py
2021/day5/: walking_in_a.py
2021/day6/: gone_away.py
2021/day7/: here_to_stay.py
2021/day8/: singing_love_songs.py
2021/day9/: walking_in_a.py
y2015/: Cargo.toml
y2015/bash/: day1.sh  day2.sh  (+5 more)
y2015/rust/: Cargo.toml
y2017/: Cargo.toml
y2019/: Intcode.hs  Utils.hs
(+441 files in other folders)
