[package]
name = "aoc-rust-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
md5 = "0.7.0"
ndarray = "0.15.4"
itertools = "0.10.3"
serde_json = "1.0.82"
strum = "0.24"
strum_macros = "0.24"
